--- a/BarVolume/app/src/main/res/layout/activity_main.xml
+++ b/BarVolume/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,55 @@
     android:layout_height="match_parent"
     tools:context="com.ramusthastudio.barvolume.MainActivity">
 
+  <EditText
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:id="@+id/lengthTextView"
+      android:hint="@string/panjang"
+      android:inputType="numberDecimal"
+      android:lines="1"
+      app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="8dp"
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+  <EditText
+      android:hint="@string/lebar"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:id="@+id/widthTextView"
+      android:inputType="numberDecimal"
+      android:lines="1"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toBottomOf="@+id/lengthTextView"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"/>
+  <EditText
+      android:hint="@string/tinggi"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:id="@+id/heightTextView"
+      android:layout_marginTop="8dp"
+      android:inputType="numberDecimal"
+      android:lines="1"
+      app:layout_constraintTop_toBottomOf="@+id/widthTextView"
+      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
+  <Button
+      android:text="@string/hitung"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:id="@+id/calculateButton" android:layout_marginTop="8dp"
+      app:layout_constraintTop_toBottomOf="@+id/heightTextView"
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
   <TextView
+      android:text="@string/hasil"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      android:id="@+id/resultTextView"
+      android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/calculateButton"
+      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+      android:textStyle="bold" android:textSize="24sp"/>
 
 </android.support.constraint.ConstraintLayout>
