--- a/MyFlexibleFragment/app/src/main/res/layout/fragment_option_dialog.xml
+++ b/MyFlexibleFragment/app/src/main/res/layout/fragment_option_dialog.xml
@@ -3,21 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".OptionDialogFragment" android:id="@+id/linearLayout4">
+    android:layout_height="wrap_content"
+    tools:context=".OptionDialogFragment">
   <TextView
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="Siapa pelatih tersukses Machester United?"
       android:id="@+id/textView3" app:layout_constraintVertical_chainStyle="packed"
-      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/rb_saf"
+      app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="8dp" android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"/>
 
   <RadioGroup
       android:id="@+id/rg_options"
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:orientation="vertical" android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
       app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
