--- a/MyService/app/src/main/res/layout/activity_main.xml
+++ b/MyService/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,22 @@
     android:layout_height="match_parent"
     tools:context="com.ramusthastudio.myservice.MainActivity">
 
-  <TextView
-      android:layout_width="wrap_content"
+  <Button
+      android:id="@+id/btn_start_service"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toTopOf="parent"/>
+      android:text="Start Service" android:layout_marginEnd="8dp"
+      app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
+      android:layout_marginTop="8dp"/>
+  <Button
+      android:id="@+id/btn_start_intent_service"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="Start Intent Service"
+      android:layout_marginTop="8dp"
+      app:layout_constraintTop_toBottomOf="@+id/btn_start_service"
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
