update movie layout catalogueproject

--- a/CatalogueMovie/app/src/main/res/values/styles.xml
+++ b/CatalogueMovie/app/src/main/res/values/styles.xml
@@ -1,11 +1,20 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
     <item name="colorAccent">@color/colorAccent</item>
+
+    <item name="ratingCircle">@color/colorAccent</item>
+    <item name="navLine">@color/colorAccent</item>
+  </style>
+
+  <style name="ButtonGeneral" parent="@style/Widget.AppCompat.Button.Colored">
+    <item name="android:layout_width">40dp</item>
+    <item name="android:layout_height">20dp</item>
+    <item name="android:textColor">@android:color/white</item>
   </style>
 
 </resources>
