--- a/CatalogueMovie/app/src/main/res/layout/fragment_detail.xml
+++ b/CatalogueMovie/app/src/main/res/layout/fragment_detail.xml
@@ -1,72 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".DetailFragment">
+    android:layout_height="match_parent">
 
-  <ImageView
+  <android.support.constraint.ConstraintLayout
+      xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto"
+      xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
-      android:layout_height="200dp" app:srcCompat="@mipmap/ic_launcher"
-      android:id="@+id/detailImage" app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+      android:layout_height="match_parent"
+      tools:context=".DetailFragment">
+
+    <ImageView
+        android:id="@+id/detailImage"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" app:srcCompat="@mipmap/ic_launcher"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
+
+    <TextView
+        tools:text="7.6"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:id="@+id/detailRating"
+        android:maxLines="1"
+        android:background="@drawable/circle_background"
+        android:textStyle="bold"
+        android:gravity="center"
+        app:layout_constraintEnd_toEndOf="@+id/detailImage"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintTop_toTopOf="@+id/detailImage" android:layout_marginTop="8dp"
+        android:textAlignment="center"/>
+
+    <TableLayout
+        android:id="@+id/tableDetail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/detailImage">
+
+      <TableRow
+          android:id="@+id/rowTitle"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+        <TextView
+            android:text="@string/title"
+            android:layout_width="70dp"/>
+
+        <TextView
+            tools:text="Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/detailTitle"
+            android:textStyle="bold"/>
+      </TableRow>
+
+      <TableRow
+          android:id="@+id/rowPubDate"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+
+        <TextView
+            android:text="@string/release"
+            android:layout_width="70dp"/>
+
+        <TextView
+            android:id="@+id/detailDate"
+            tools:text="Release date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+      </TableRow>
+
+    </TableLayout>
+
   <TextView
-      android:text="Title"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/detailTitle"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-      android:textStyle="bold"
-      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-      app:layout_constraintTop_toBottomOf="@+id/detailImage" android:layout_marginTop="8dp"/>
-  <TextView
-      android:text="Release date"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/detailDate"
-      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detailTitle"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-      android:layout_marginStart="8dp"
-      android:textStyle="italic" android:textSize="12sp"
-      app:layout_constraintStart_toStartOf="parent"/>
-  <TextView
-      android:text="Genre"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/detailGenre"
-      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detailDate"
-      android:layout_marginStart="8dp"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-      app:layout_constraintStart_toStartOf="parent"
-  />
-  <TextView
-      android:text="Rating"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:id="@+id/detailRating"
-      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detailGenre"
-      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
-  <TextView
-      android:text="Description"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
       android:id="@+id/detailDesc"
-      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detailRating"
-      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+      tools:text="Description"
+      android:singleLine="false"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      app:layout_constraintEnd_toEndOf="parent"
+      android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tableDetail"/>
+
+  <TextView
+      android:id="@+id/detailGenre"
+      tools:text="Genre"
+      android:singleLine="false"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-  />
+      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+      android:textAlignment="center" android:textStyle="bold|italic" android:textSize="14sp"
+      android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/detailDesc"/>
   <Button
-      android:text="Close"
+      android:id="@+id/closeBtn"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:id="@+id/closeBtn"
-      android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/detailDesc"
-      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-      app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
-</android.support.constraint.ConstraintLayout>
+      android:text="@string/close_btn"
+      android:layout_marginTop="8dp"
+      style="@style/ButtonGeneral"
+      app:layout_constraintTop_toBottomOf="@+id/detailGenre"/>
+  </android.support.constraint.ConstraintLayout>
+
+</android.support.v4.widget.NestedScrollView>
