--- a/CatalogueMovie/app/src/main/res/layout/fragment_main.xml
+++ b/CatalogueMovie/app/src/main/res/layout/fragment_main.xml
@@ -11,16 +11,17 @@
       android:orientation="horizontal">
     <EditText
         android:id="@+id/searchText"
-        android:hint="@string/search_movie"
+        android:hint="@string/search_movie_hint"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"/>
     <Button
         android:id="@+id/searchBtn"
-        android:text="@string/search"
+        android:text="@string/search_movie_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        style="@style/ButtonGeneral"/>
   </LinearLayout>
 
   <android.support.v4.widget.SwipeRefreshLayout
