--- a/CatalogueMovie/app/src/main/res/values/styles.xml
+++ b/CatalogueMovie/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
   <!-- Base application theme. -->
-  <style name="AppTheme" parent="Theme.AppCompat.NoActionBar">
+  <style name="AppThemeDark" parent="Theme.AppCompat.NoActionBar">
     <!-- Customize your theme here. -->
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -11,10 +11,29 @@
     <item name="navLine">@color/colorAccent</item>
   </style>
 
+  <style name="AppThemeLight" parent="Theme.AppCompat.Light.NoActionBar">
+    <!-- Customize your theme here. -->
+    <item name="colorPrimary">@color/colorPrimary</item>
+    <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <item name="colorAccent">@color/colorAccent</item>
+
+    <item name="ratingCircle">@color/colorAccent</item>
+    <item name="navLine">@color/colorAccent</item>
+  </style>
+
+  <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.ActionBar"/>
+  <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat"/>
+
   <style name="ButtonGeneral" parent="@style/Widget.AppCompat.Button.Colored">
     <item name="android:layout_width">40dp</item>
     <item name="android:layout_height">20dp</item>
     <item name="android:textColor">@android:color/white</item>
+  </style>
+
+  <style name="CustomToolbarTheme" parent="Theme.AppCompat.NoActionBar">
+    <item name="android:textColorPrimary">@color/colorAccent</item>
+    <item name="actionMenuTextColor">@color/colorAccent</item>
+    <item name="android:textColorSecondary">@color/colorAccent</item>
   </style>
 
 </resources>
