--- a/CatalogueMovie/app/src/main/res/drawable/side_nav_bar.xml
+++ b/CatalogueMovie/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle">
   <gradient
       android:angle="270"
-      android:centerColor="#7986CB"
-      android:endColor="#C5CAE9"
-      android:startColor="#3F51B5"
+      android:centerColor="#FF4081"
+      android:endColor="#fd70a0"
+      android:startColor="#FF4081"
       android:type="linear" />
 </shape>
