--- a/CatalogueMovie/app/src/main/res/layout/nav_header_main.xml
+++ b/CatalogueMovie/app/src/main/res/layout/nav_header_main.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/nav_header_height"
+    android:background="@drawable/side_nav_bar"
     android:padding="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:gravity="bottom">
@@ -12,6 +13,6 @@
       android:layout_height="wrap_content"
       android:paddingTop="@dimen/nav_header_vertical_spacing"
       android:text="@string/app_name"
-      android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
+      android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
 
 </LinearLayout>
