--- a/CatalogueMovie/app/src/main/res/values/styles.xml
+++ b/CatalogueMovie/app/src/main/res/values/styles.xml
@@ -36,4 +36,11 @@
     <item name="android:textColorSecondary">@color/colorAccent</item>
   </style>
 
+  <style name="collapsedAppBarText" parent="@android:style/TextAppearance.Medium">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textStyle">bold</item>
+    <item name="android:singleLine">false</item>
+    <item name="android:maxLines">3</item>
+  </style>
+
 </resources>
