--- a/CatalogueMovie/app/src/main/res/layout/fragment_movie_list.xml
+++ b/CatalogueMovie/app/src/main/res/layout/fragment_movie_list.xml
@@ -1,36 +1,26 @@
-<RelativeLayout
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ramusthastudio.cataloguemovie.AbstractMovieFragment">
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
   <include
-      android:id="@+id/movieEmpty"
-      layout="@layout/movie_empty_item"
+      layout="@layout/app_bar_main"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
 
-  <android.support.v4.widget.SwipeRefreshLayout
-      android:id="@+id/swipeListView"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/movieList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
-  </android.support.v4.widget.SwipeRefreshLayout>
-
-  <android.support.design.widget.FloatingActionButton
-      android:id="@+id/fab"
+  <android.support.design.widget.NavigationView
+      android:id="@+id/nav_view"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_alignParentEnd="true"
-      android:layout_alignParentRight="true"
-      android:layout_alignParentBottom="true"
-      android:layout_margin="@dimen/fab_margin"
-      android:src="@drawable/ic_arrow_up"
-      android:visibility="gone"/>
+      android:layout_height="match_parent"
+      android:layout_gravity="start"
+      android:fitsSystemWindows="true"
+      app:headerLayout="@layout/nav_header_main"
+      app:menu="@menu/activity_main_drawer"/>
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
