--- a/CatalogueMovie/app/src/main/res/layout/activity_movies.xml
+++ b/CatalogueMovie/app/src/main/res/layout/activity_movies.xml
@@ -5,5 +5,5 @@
     android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ramusthastudio.cataloguemovie.MovieListActivity"
+    tools:context="com.ramusthastudio.cataloguemovie.MoviesActivity"
     tools:showIn="@layout/fragment_movie_list"/>
