fixing onconfig change no internet

--- a/CatalogueMovie/app/src/main/res/layout/movie_empty_item.xml
+++ b/CatalogueMovie/app/src/main/res/layout/movie_empty_item.xml
@@ -1,28 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-  <LinearLayout
-      android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:padding="@dimen/activity_horizontal_margin">
+  <ImageView
+      android:id="@+id/itemShare"
+      android:layout_width="50dp"
+      android:layout_height="50dp"
+      android:src="@drawable/ic_announcement"
+      android:layout_gravity="center"
+      android:contentDescription="@string/share_cont_desc"/>
+  <TextView
+      android:text="@string/emptyorerror"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
-      android:layout_centerVertical="true"
-      android:layout_centerHorizontal="true">
-    <ImageView
-        android:id="@+id/itemShare"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_announcement"
-        android:layout_gravity="center"
-        android:contentDescription="@string/share_cont_desc"/>
-    <TextView
-        android:text="@string/emptyorerror"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:id="@+id/itemTitle"/>
-  </LinearLayout>
-
-</RelativeLayout>
+      android:gravity="center"
+      android:id="@+id/itemTitle"/>
+</LinearLayout>
